--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ pyarrow = "^15.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
-pyright = "^1.1.359"
+pyright = "^1.1.363"
 ruff-lsp = "^0.0.53"
 
 [[tool.poetry.source]]
@@ -44,3 +44,4 @@ select = [
 venvPath = "."
 venv = ".venv"
 include = ["omics_wgs_pipeline", "main.py"]
+reportInvalidTypeVarUse = "none"
