--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [{include = "omics_wgs_pipeline"}, {include = "gumbo_graphql_client"}
 python = "^3.12"
 ariadne-codegen = "^0.13.0"
 pandas = "^2.2.2"
-pandera = "^0.19.0"
+pandera = {extras = ["strategies"], version = "^0.19.3"}
 python-dotenv = "^1.0.1"
 pydantic = "^2.7.1"
 click = "^8.1.7"
