--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = ""
 authors = []
 readme = "README.md"
-packages = [{include = "omics_wgs_pipeline"}, {include = "gumbo_graphql_client"}]
+packages = [{include = "omics_wgs_pipeline"}]
+include = ["gumbo_gql_client"]
 
 [tool.poetry.dependencies]
 python = "^3.12"
@@ -23,7 +24,7 @@ pyarrow = "^15.0.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
-pyright = "^1.1.363"
+pyright = "^1.1.364"
 ruff-lsp = "^0.0.53"
 
 [[tool.poetry.source]]
