--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,5 @@
+GITHUB_PAT="github_pat_zzz"
+
 # staging
 #HASURA_URL="https://gumbo-gql-service-staging-nerhhociqa-uc.a.run.app/v1/graphql"
 #HASURA_ADMIN_SECRET="..."
