--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ google-cloud-logging = "^3.10.0"
 functions-framework = "^3.5.0"
 typer = "^0.9.0"
 pyarrow = "^15.0.2"
+pygithub = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
