--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pygithub = "^2.3.0"
 ruff = "^0.4.2"
 pyright = "^1.1.365"
 ruff-lsp = "^0.0.53"
+jupyter = "^1.0.0"
 
 [[tool.poetry.source]]
 name = "public-python"
