--- a/config.toml
+++ b/config.toml
@@ -53,3 +53,10 @@ method_config_name = "call_mutations"
 method_synopsis = "Call mutations"
 workflow_wdl_path = "./workflows/call_mutations/call_mutations.wdl"
 method_config_json_path = "./workflows/call_mutations/call_mutations.json"
+
+[terra.annotate_mutations]
+repo_method_name = "annotate_mutations"
+method_config_name = "annotate_mutations"
+method_synopsis = "Annotate mutations"
+workflow_wdl_path = "./workflows/annotate_mutations/annotate_mutations.wdl"
+method_config_json_path = "./workflows/annotate_mutations/annotate_mutations.json"
