--- a/.env.dist
+++ b/.env.dist
@@ -7,3 +7,5 @@ GITHUB_PAT="github_pat_zzz"
 # prod
 HASURA_URL="https://gumbo-gql-service-prod-nerhhociqa-uc.a.run.app/v1/graphql"
 HASURA_ADMIN_SECRET="..."
+
+ONCOKB_API_KEY="..."
