--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,17 +11,17 @@ include = ["gumbo_gql_client"]
 python = "^3.12"
 ariadne-codegen = "^0.13.0"
 pandas = "^2.2.2"
-pandera = {extras = ["strategies"], version = "^0.19.3"}
+pandera = {extras = ["strategies"], version = "^0.20.3"}
 python-dotenv = "^1.0.1"
 pydantic = "^2.7.1"
 click = "^8.1.7"
 google-cloud-storage = "^2.16.0"
-firecloud = "^0.16.36"
 google-cloud-logging = "^3.10.0"
 functions-framework = "^3.5.0"
 typer = "^0.9.0"
 pyarrow = "^15.0.2"
 pygithub = "^2.3.0"
+nebelung = "0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.2"
