--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,6 @@
 WOMTOOL_JAR="/path/to/womtool.jar"
 GITHUB_PAT="github_pat_zzz"
+FIRECLOUD_OWNERS='["user@example.com", "group@firecloud.org"]'
 
 # staging
 #HASURA_URL="https://gumbo-gql-service-staging-nerhhociqa-uc.a.run.app/v1/graphql"
