list ref urls explicitly

--- a/config.toml
+++ b/config.toml
@@ -2,8 +2,6 @@ title = "omics-wgs-pipeline config"
 
 gcp_project_id = "depmap-omics"
 uuid_namespace = "00000000-0000-0000-0000-000000000000"
-ref_base_url = "gs://gcp-public-data--broad-references/hg38/v0/Homo_sapiens_assembly38"
-delivery_ref_base_url = "gs://gcp-public-data--broad-references/hg38/v0/Homo_sapiens_assembly38"
 
 [terra]
 repo_namespace = "cds-pipelines"
@@ -58,3 +56,33 @@ method_config_name = "annotate_mutations"
 method_synopsis = "Annotate mutations"
 workflow_wdl_path = "./workflows/annotate_mutations/annotate_mutations.wdl"
 method_config_json_path = "./workflows/annotate_mutations/annotate_mutations.json"
+
+[ref.hg19]
+ref_amb = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.fasta.amb"
+ref_ann = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.fasta.ann"
+ref_bwt = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.fasta.bwt"
+ref_dict = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.dict"
+ref_fasta = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.fasta"
+ref_fasta_index = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.fasta.fai"
+ref_pac = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.fasta.pac"
+ref_sa = "gs://ccleparams/reference/hg19/Homo_sapiens_assembly19.fasta.sa"
+
+[ref.hg38]
+ref_amb = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.fasta.amb"
+ref_ann = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.fasta.ann"
+ref_bwt = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.fasta.bwt"
+ref_dict = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.dict"
+ref_fasta = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.fasta"
+ref_fasta_index = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.fasta.fai"
+ref_pac = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.fasta.pac"
+ref_sa = "gs://ccleparams/hg38ref/Homo_sapiens_assembly38.fasta.sa"
+
+[ref.giab]
+ref_amb = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.amb"
+ref_ann = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.ann"
+ref_bwt = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.bwt"
+ref_dict = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.dict"
+ref_fasta = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta"
+ref_fasta_index = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.fai"
+ref_pac = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.pac"
+ref_sa = "gs://ccleparams/GIAB_hg38_patched_ref/GRCh38_GIABv3_no_alt_analysis_set_maskedGRC_decoys_MAP2K3_KMT2C_KCNJ18.fasta.sa"
