--- a/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
+++ b/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
@@ -14,6 +14,7 @@ click = "^8.1.7"
 pandera = "^0.20.1"
 case-converter = "^1.1.0"
 bgzip = "^0.5.0"
+vcf-info-merger = {git = "https://github.com/broadinstitute/vcf-info-merger.git"}
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
