more opencravat url encodings

--- a/workflows/annotate_mutations/annotate-mutations-postprocess/config.toml
+++ b/workflows/annotate_mutations/annotate-mutations-postprocess/config.toml
@@ -50,8 +50,11 @@ url_encoded_col_name_regexes = [
     "^info__csq__hgvsp",
     "^info__oc_base_achange",
     "^info__oc_base_all_mappings",
+    "^info__oc_gwas_catalog_init_samp",
+    "^info__oc_gwas_catalog_rep_samp",
     "^info__oc_pharmgkb_chemicals",
     "^info__oc_pharmgkb_drug_assoc",
+    "^info__oc_pharmgkb_pheno_cat",
     "^info__oc_provean_all",
     "^info__oc_revel_all",
     "^info__oc_revel_transcript",
