--- a/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
+++ b/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
@@ -16,6 +16,7 @@ case-converter = "^1.1.0"
 bgzip = "^0.5.0"
 vcf-info-merger = {git = "https://github.com/broadinstitute/vcf-info-merger.git"}
 pysam = "^0.22.1"
+duckdb = "^1.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
