add back url decode

--- a/workflows/annotate_mutations/annotate-mutations-postprocess/config.toml
+++ b/workflows/annotate_mutations/annotate-mutations-postprocess/config.toml
@@ -45,23 +45,11 @@ compound_info_fields = [
 ]
 
 url_encoded_col_name_regexes = [
-    "^info__civic_desc",
-    "^info__clndn_3",
-    "^info__csq__hgvsp",
-    "^info__oc_base_achange",
-    "^info__oc_base_all_mappings",
-    "^info__oc_gwas_catalog_ci",
-    "^info__oc_gwas_catalog_disease",
-    "^info__oc_gwas_catalog_init_samp",
-    "^info__oc_gwas_catalog_rep_samp",
-    "^info__oc_pharmgkb_chemicals",
-    "^info__oc_pharmgkb_drug_assoc",
-    "^info__oc_pharmgkb_pheno_cat",
-    "^info__oc_provean_all",
-    "^info__oc_revel_all",
-    "^info__oc_revel_transcript",
-    "^info__oncokb_muteff",
-    "^info__oncokb_onco",
+    "^civic_desc$",
+    "^clndn$",
+    "^oc_",
+    "^oncokb_muteff$",
+    "^oncokb_oncogenic$",
 ]
 
 info_cols_ignored = [
