--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pyright = "^1.1.365"
 ruff-lsp = "^0.0.53"
 jupyter = "^1.0.0"
 pyliftover = "^0.4.1"
+gffutils = "^0.13"
 
 [[tool.poetry.source]]
 name = "public-python"
