--- a/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
+++ b/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
@@ -13,6 +13,7 @@ typer = "^0.9.0"
 click = "^8.1.7"
 pandera = "^0.20.1"
 duckdb = "^1.1.0"
+pyarrow = "^18.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
