--- a/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
+++ b/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
@@ -8,16 +8,15 @@ packages = [{include = "annotate_mutations_postprocess"}]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pandas = "^2.2.2"
-typer = "^0.9.0"
-click = "^8.1.7"
-pandera = "^0.20.1"
-duckdb = "^1.1.0"
+pandas = "^2.2.3"
+pandera = "^0.21.0"
+duckdb = "^1.1.3"
 pyarrow = "^18.1.0"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.4.8"
-ruff-lsp = "^0.0.56"
+ruff = "^0.8.1"
+ruff-lsp = "^0.0.59"
+vcf-to-duckdb = "^0.1.0"
 
 [tool.ruff]
 select = [
