--- a/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
+++ b/workflows/annotate_mutations/annotate-mutations-postprocess/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 pandas = "^2.2.3"
 duckdb = "^1.1.3"
 pyarrow = "^18.1.0"
+typer = "^0.15.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.8.4"
