--- a/workflows/call_absolute_copy_numbers/purecn-postprocess/pyproject.toml
+++ b/workflows/call_absolute_copy_numbers/purecn-postprocess/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.12"
 pandas = "^2.2.3"
 typer = "^0.12.5"
 click = "^8.1.8"
+pandera = "^0.22.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.10"
