--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,9 @@ include = ["gumbo_gql_client"]
 python = "^3.12"
 ariadne-codegen = "^0.13.0"
 pandas = "^2.2.2"
-pandera = {extras = ["strategies"], version = "^0.20.3"}
+pandera = {extras = ["strategies"], version = "^0.20.4"}
 python-dotenv = "^1.0.1"
-pydantic = "^2.7.1"
+pydantic = "^2.10.6"
 click = "^8.1.7"
 google-cloud-storage = "^2.16.0"
 google-cloud-logging = "^3.10.0"
@@ -21,12 +21,12 @@ functions-framework = "^3.5.0"
 typer = "^0.9.0"
 pyarrow = "^15.0.2"
 pygithub = "^2.3.0"
-nebelung = "^1.0.5"
+nebelung = "^2.1.0"
+pd-flatten = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
-ruff = "^0.4.2"
+ruff = "^0.4.10"
 pyright = "^1.1.365"
-ruff-lsp = "^0.0.53"
 jupyter = "^1.0.0"
 pyliftover = "^0.4.1"
 gffutils = "^0.13"
