--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pyarrow = "^15.0.2"
 pygithub = "^2.3.0"
 nebelung = "^2.1.0"
 pd-flatten = "^0.1.1"
+google-cloud-secret-manager = "^2.22.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.10"
