ensure data table col presence

--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ repo_namespace = "cds-pipelines"
 workspace_namespace = "broad-firecloud-ccle"
 workspace_name = "omics_wgs_pipeline"
 legacy_workspace_namespace = "broad-firecloud-ccle"
-legacy_workspace_name = "DepMap_WGS_CN-test-bam-load"
+legacy_workspace_name = "DepMap_WGS_CN-warp-eval"
 
 [terra.align_wgs_sample]
 method_namespace = "cds-pipelines"
