install specific version of poetry in dockerfiles

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 title = "omics-wgs-pipeline config"
 
-gcp_project_id = "cds-pipelines"
+gcp_project_id = "depmap-omics"
 gumbo_env = "prod"
 uuid_namespace = "00000000-0000-0000-0000-000000000000"
 dry_run = true
