--- a/workflows/call_mutations/call-mutations-postprocess/Dockerfile
+++ b/workflows/call_mutations/call-mutations-postprocess/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.12.3-bullseye
 ENV PYTHONUNBUFFERED=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=on \
     PIP_DEFAULT_TIMEOUT=100 \
-    POETRY_VERSION=1.8.3 \
+    POETRY_VERSION=1.8.4 \
     POETRY_HOME="/opt/poetry" \
     POETRY_NO_INTERACTION=1 \
     POETRY_VIRTUALENVS_CREATE=true \
@@ -15,7 +15,7 @@ ENV PATH="$VIRTUAL_ENVIRONMENT_PATH/bin:$PATH"
 
 WORKDIR /${PYTHONPATH}
 
-RUN pip install poetry
+RUN pip install poetry==${POETRY_VERSION}
 COPY pyproject.toml poetry.lock ./
 RUN poetry install --only main --no-root --no-cache
 
