--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "omics-wgs-pipeline config"
 gcp_project_id = "depmap-omics"
 gumbo_env = "prod"
 uuid_namespace = "00000000-0000-0000-0000-000000000000"
-dry_run = true
+dry_run = false
 
 [terra]
 repo_namespace = "cds-pipelines"
