make segdup script

--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
 WOMTOOL_JAR="/path/to/womtool.jar"
 FIRECLOUD_OWNERS='["user@example.com", "group@firecloud.org"]'
-
 ONCOKB_API_KEY="..."
+GALAXY_API_KEY="..."
