--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ pyright = "^1.1.365"
 jupyter = "^1.0.0"
 pyliftover = "^0.4.1"
 gffutils = "^0.13"
+natsort = "^8.4.0"
+bioblend = "^1.5.0"
 
 [[tool.poetry.source]]
 name = "public-python"
