--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "omics-wgs-pipeline config"
+title = "depmap-omics-wgs config"
 
 gcp_project_id = "depmap-omics"
 gumbo_env = "prod"
@@ -8,7 +8,7 @@ dry_run = false
 [terra]
 repo_namespace = "cds-pipelines"
 workspace_namespace = "broad-firecloud-ccle"
-workspace_name = "depmap-omics_wgs"
+workspace_name = "depmap-omics-wgs"
 legacy_workspace_namespace = "broad-firecloud-ccle"
 legacy_workspace_name = "DepMap_WGS_CN"
 
