--- a/workflows/postprocess_mutations/annotate-mutations-postprocess/pyproject.toml
+++ b/workflows/postprocess_mutations/annotate-mutations-postprocess/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = []
 readme = "README.md"
 packages = [{include = "annotate_mutations_postprocess"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
