--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pyliftover = "^0.4.1"
 gffutils = "^0.13"
 natsort = "^8.4.0"
 bioblend = "^1.5.0"
+google-cloud-bigquery = "^3.33.0"
 
 [[tool.poetry.source]]
 name = "public-python"
