--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "depmap-omics-wgs"
 version = "0.1.0"
 description = ""
 authors = []
-requires-python = "~=3.12"
+requires-python = "~=3.13"
 readme = "README.md"
 dependencies = [
     "ariadne-codegen>=0.14.0,<0.15",
@@ -25,7 +25,6 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "pyarrow>=15.0.2,<16",
     "ruff>=0.12.0,<0.13",
     "pyright>=1.1.402,<2",
     "jupyter>=1.0.0,<2",
@@ -35,6 +34,7 @@ dev = [
     "bioblend>=1.5.0,<2",
     "google-cloud-bigquery>=3.33.0,<4",
     "pandas-stubs>=2.2.3.250527,<3",
+    "pyarrow>=20.0.0",
 ]
 
 [[tool.uv.index]]
