--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "google-cloud-secret-manager>=2.22.1,<3",
     "tqdm>=4.67.1,<5",
     "firecloud-api-cds>=0.2.0",
-    "nebelung>=2.9.3",
+    "nebelung>=2.9.4,<3",
 ]
 
 [dependency-groups]
