misc select sv fixes

--- a/workflows/select_structural_variants/select-structural-variants/Dockerfile
+++ b/workflows/select_structural_variants/select-structural-variants/Dockerfile
@@ -4,7 +4,10 @@ ENV PYTHONUNBUFFERED=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=on \
     PIP_DEFAULT_TIMEOUT=100 \
     PYTHONPATH=/app \
-    UV_CACHE_DIR=/tmp/uv-cache
+    UV_CACHE_DIR=/tmp/uv-cache \
+    UV_VENV=/app/.venv
+
+ENV PATH="$UV_VENV/bin:$PATH"
 
 WORKDIR /app
 
