--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ blinker==1.9.0
     # via flask
 cachetools==5.5.2
     # via google-auth
-certifi==2025.6.15
+certifi==2025.7.14
     # via
     #   httpcore
     #   httpx
@@ -119,7 +119,7 @@ httpcore==1.0.9
     # via httpx
 httpx==0.28.1
     # via ariadne-codegen
-hypothesis==6.135.26
+hypothesis==6.135.32
     # via pandera
 idna==3.10
     # via
@@ -155,7 +155,7 @@ numpy==2.3.1
     # via
     #   pandas
     #   pandera
-opentelemetry-api==1.34.1
+opentelemetry-api==1.35.0
     # via google-cloud-logging
 packaging==25.0
     # via
@@ -265,6 +265,7 @@ typer==0.16.0
     # via depmap-omics-wgs (pyproject.toml)
 typing-extensions==4.14.1
     # via
+    #   anyio
     #   opentelemetry-api
     #   pydantic
     #   pydantic-core
