--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@
 annotated-types==0.7.0
     # via pydantic
 anyio==4.9.0
-    # via httpx
+    # via
+    #   httpx
+    #   starlette
 ariadne-codegen==0.14.0
     # via depmap-omics-wgs (pyproject.toml)
 attrs==25.3.0
@@ -37,7 +39,8 @@ click==8.2.1
     #   flask
     #   functions-framework
     #   typer
-cloudevents==1.12.0
+    #   uvicorn
+cloudevents==1.11.0
     # via functions-framework
 cryptography==45.0.5
     # via pyjwt
@@ -51,7 +54,7 @@ firecloud-api-cds==0.2.0
     #   nebelung
 flask==3.1.1
     # via functions-framework
-functions-framework==3.8.3
+functions-framework==3.9.1
     # via depmap-omics-wgs (pyproject.toml)
 google-api-core==2.25.1
     # via
@@ -103,18 +106,22 @@ grpc-google-iam-v1==0.14.2
     # via
     #   google-cloud-logging
     #   google-cloud-secret-manager
-grpcio==1.73.1
+grpcio==1.74.0
     # via
     #   google-api-core
     #   googleapis-common-protos
     #   grpc-google-iam-v1
     #   grpcio-status
-grpcio-status==1.73.1
+grpcio-status==1.74.0
     # via google-api-core
 gunicorn==23.0.0
-    # via functions-framework
+    # via
+    #   functions-framework
+    #   uvicorn-worker
 h11==0.16.0
-    # via httpcore
+    # via
+    #   httpcore
+    #   uvicorn
 httpcore==1.0.9
     # via httpx
 httpx==0.28.1
@@ -149,9 +156,9 @@ mypy-extensions==1.1.0
     # via
     #   black
     #   typing-inspect
-nebelung==2.9.5
+nebelung==2.9.6
     # via depmap-omics-wgs (pyproject.toml)
-numpy==2.3.1
+numpy==2.3.2
     # via
     #   pandas
     #   pandera
@@ -255,6 +262,8 @@ sniffio==1.3.1
     # via anyio
 sortedcontainers==2.4.0
     # via hypothesis
+starlette==0.47.2
+    # via functions-framework
 toml==0.10.2
     # via ariadne-codegen
 tqdm==4.67.1
@@ -270,6 +279,7 @@ typing-extensions==4.14.1
     #   pydantic
     #   pydantic-core
     #   pygithub
+    #   starlette
     #   typeguard
     #   typer
     #   typing-inspect
@@ -284,6 +294,12 @@ urllib3==2.5.0
     # via
     #   pygithub
     #   requests
+uvicorn==0.35.0
+    # via
+    #   functions-framework
+    #   uvicorn-worker
+uvicorn-worker==0.3.0
+    # via functions-framework
 watchdog==6.0.0
     # via functions-framework
 werkzeug==3.1.3
